# visionlab_stack

./: .gitignore  MANIFEST.in  README.md  people_remove_dev.py  requirements.txt  setup.cfg  setup.py
visionlab_stack/: peopleRemove.py
visionlab_stack/detection/yolov3/: yolov3Lib.py
visionlab_stack/detection/yolov5/: MY-README.md  Note.md  detect.py  hubconf.py  requirements-modified.txt  yolov5Lib.py
visionlab_stack/detection/yolov5/models/: experimental.py
visionlab_stack/detection/yolov5/utils/: plots.py
visionlab_stack/inpainting/DeepFillV1/: DeepFillV1Lib.py  DeepFillV1Model.py  ops.py
visionlab_stack/inpainting/inpainting/: inpaintingLib.py
visionlab_stack/inpainting/inpainting/utils/: inpaint_model.py  inpaint_ops.py  ngconfig.py
visionlab_stack/utils/: backgroundSubtraction.py  common.py  contrast.py  display.py  estimateBackground.py  estimateBackgroundFromImages.py  histogramMatching.py  peopleRemove.py
visionlab_stack/vision/backgroundSubtraction/: backgroundSubtractionLib.py
