[metadata]
name = visionlab_stack
version = 0.0.1
url = https://github.com/visiont3lab/fast_detectors.git
author = Manuel Rucci
author_email = ruccimanuel7@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC License
    Operating System :: OS Independent
description = A collection of fast detectors to use in real time scenario
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = 3.6